solve navbar overlapping issue

--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@ button {
 
 
 /* ================ navbar ================= */
+.nav-berger{
+    display: none;
+}
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -80,8 +83,8 @@ button {
 .container {
     display: flex;
     flex-direction: row;
-    height: 90vh;
-    background-color: whitesmoke;
+    height:83vh;
+    /* background-color: whitesmoke; */
 }
 
 .home-contact-link-button {
@@ -202,7 +205,6 @@ button {
 .skills {
     display: flex;
     flex-direction: column;
-    /* height: 100vh; */
 }
 
 .skills-description {
@@ -335,6 +337,8 @@ button {
 
 .contact-link div p {
     padding: 15px 0px;
+    
+
 }
 
 .contact-form {
@@ -401,8 +405,8 @@ button {
 
     }
 
-    .container {
-        height: 100vh;
+    .main-contant {
+        /* height: 100vh; */
     }
 
     .navbar {
@@ -425,19 +429,21 @@ button {
 
     .home-img {
         right: 89px;
-        margin-top: -24em;
+        margin-top: -389px;
         margin-right: 40px;
         /* display: none; */
     }
 
     .home-contact-link-button {
-        margin-top: 32px;
+        margin-top: 215px;
     }
 
     .home-description {
         margin-left: 14px;
         width: auto;
         margin-right: 38px;
+        margin-top: 282px;
+
     }
     button {
         border: 2px solid #e96268;
@@ -625,14 +631,14 @@ button {
         width: 100vw;
     }
 
-    /* hamberger */
-      
+    .contact-link div p {
        
-    /* }.nav-berger{
-      
-       
-    } */
+        color: white;
+    
+    }
+   
     .hidden-berger{
+        z-index: 1;
         height: 70px;
         background-color: #FA4D56;
        position: fixed; /* Set the navbar to fixed position */
@@ -651,6 +657,7 @@ button {
     cursor: pointer;
    }
    .open-berger{
+    z-index: 1;
     height: 160px;
     background-color: #FA4D56;
    position: fixed; /* Set the navbar to fixed position */
@@ -680,7 +687,12 @@ flex-wrap: wrap;
     color: white;
     font-weight: bold;
    }
+   .berger-item i{
+    padding: 10px;
+   }
 
-
+  #clr{
+    color: white;
+  }
 }
 
